-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
The current code places bl_ast lock callbacks at the end of the global BL callback queue. This is bad because it causes urgent requests from the server to wait behind non-urgent cleanup tasks to keep lru_size at the right level.
This can lead to evictions if there is a large queue of items in the global queue so the callback is not serviced in a timely manner.
Put bl_ast callbacks on the priority queue so they do not wait behind the background traffic.